--- a/my git css.html
+++ b/my git css.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+    <header>
+    
+MY PAGE
+
+    </header>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git Css</title>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio temporibus earum incidunt pariatur aspernatur nisi at eligendi nam deleniti adipisci tenetur enim libero, facilis dolores itaque id suscipit ratione delectus.</p>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, distinctio natus. Obcaecati eum esse eligendi, libero, nihil ipsa voluptatum perspiciatis non, reiciendis quo eius enim porro laudantium quaerat labore dolore.</p>
-
+    <link rel="stylesheet" href="styles/blog.css">
+   
 </head>
 <body>
+     <div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio temporibus earum incidunt pariatur aspernatur nisi at eligendi nam deleniti adipisci tenetur enim libero, facilis dolores itaque id suscipit ratione dejects.</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, distinctio natus. Obcaecati eum esse eligendi, libero, nihil ipsa voluptatum perspiciatis non, reiciendis quo eius enim porro laudantium quaerat labore dolore.</p></div>
+
     
 </body>
 </html>
